# riscvsim

./: CMakeLists.txt  config.txt  makefile  riscv_sim  test.py  test.s
include/: cache.h  constants.h  instr.h  preprocessor.h  processor.h  utils.h
src/: cache.cpp  constants.cpp  instr.cpp  main.cpp  preprocessor.cpp  processor.cpp  utils.cpp
tests/test1/: filename.ext  input.txt  output.txt  t.out  test.output  test.s.output
tests/test2/: config.txt  expected_filename.ext  expected_input2.output  expected_output.txt  filename.ext  input.txt  input2.s  output.txt
tests/test3/: config.txt  expected_output.txt  input.txt  input3.s  output.txt  test.s
tests/test4/: config.txt  expected_filename.ext  expected_input4.output  expected_output.txt  input.txt  input4.s
tests/test5/: config.txt  expected_filename.ext  expected_input5.output  expected_output.txt  input.txt  input5.s
